--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "easy-peasy-bot",
   "version": "1.0.0",
-  "description": "The awesomest bot evar.",
+  "description": "Stokes: The awesomest bot evar.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DEGoodmanWilson/easy-peasy-bot-app.git"
+    "url": "git+https://github.com/rockgecko-development/easy-peasy-bot"
   },
   "keywords": [
     "slack",
@@ -18,14 +18,15 @@
   "author": "D.E. Goodman-Wilson",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/DEGoodmanWilson/easy-peasy-bot-app/issues"
+    "url": "https://github.com/rockgecko-development/easy-peasy-bot/issues"
   },
-  "homepage": "https://github.com/DEGoodmanWilson/easy-peasy-bot-app#readme",
+  "homepage": "https://github.com/rockgecko-development/easy-peasy-bot#readme",
   "engines": {
     "node": "5.1.1"
   },
   "dependencies": {
     "botkit": "0.2.2",
+    "botkit-middleware-apiai": "0.0.2",
     "botkit-storage-mongo": "^1.0.2",
     "mongodb": "^1.4.39"
   }
